# cosmos-ethereum-ibc-lcp

./: .gitignore  .gitmodules  ImportRustSGXSDK.mk  Makefile  README.md  go.mod  go.sum
.github/workflows/: test.yml
enclave/: Cargo.toml
enclave/src/: lib.rs
relayer/: main.go
tests/certs/: simulate_dcap_root_cert.pem
tests/e2e/cases/tm2eth/: Makefile
tests/e2e/cases/tm2eth/configs/: path.json
tests/e2e/cases/tm2eth/configs/templates/: ibc-0-zkdcap.json.tpl  ibc-0.json.tpl  ibc-1-zkdcap.json.tpl  ibc-1.json.tpl
tests/e2e/cases/tm2eth/scripts/: elc-updater  fixture  gen_rly_config.sh  handshake  init-rly  restore  shfu-server  test-channel-upgrade  test-operators  test-service  test-tx  test-tx-timeout  utils
tests/e2e/cases/xion2eth/: Makefile
tests/e2e/cases/xion2eth/configs/templates/: ibc-0.json.tpl  ibc-1.json.tpl
tests/e2e/cases/xion2eth/scripts/: fixture  gen_rly_config.sh  handshake  init-rly  restore  store_wasm_code.sh  test-channel-upgrade  test-operators
tests/e2e/cases/xion2xion/: Makefile
tests/e2e/cases/xion2xion/configs/templates/: ibc-0.json.tpl  ibc-1.json.tpl
tests/e2e/cases/xion2xion/scripts/: fixture  gen_rly_config.sh  handshake  init-rly  restore  store_wasm_code.sh  test-operators  test-tx
tests/e2e/chains/ethereum/: Dockerfile.deposit  Dockerfile.geth  Dockerfile.lodestar  Dockerfile.npm  Makefile  README.md  compose.yaml  docker-compose.yml
tests/e2e/chains/ethereum/config/: jwtsecret  simulation_dcap_rootca.der  simulation_rootca.der
tests/e2e/chains/ethereum/consensus/validator_keys/: deposit_data-1673840139.json  keystore-m_12381_3600_0_0_0-1673840136.json  keystore-m_12381_3600_1_0_0-1673840136.json  keystore-m_12381_3600_2_0_0-1673840137.json  keystore-m_12381_3600_3_0_0-1673840138.json
tests/e2e/chains/ethereum/contracts/: .gitignore  hardhat.config.js  package-lock.json  package.json  remappings.txt  truffle-config.js
tests/e2e/chains/ethereum/contracts/contracts/: App.sol  Dependencies.sol  MockApp.sol
tests/e2e/chains/ethereum/contracts/migrations/: 1_initial_migration.js
tests/e2e/chains/ethereum/contracts/scripts/: deploy.js
tests/e2e/chains/ethereum/execution/: genesis.json
tests/e2e/chains/ethereum/scripts/: check_block.sh  extract-abi.sh  geth_entrypoint.sh  install-deposit-cli.sh  lodestar_entrypoint.sh  setup-docker-deposit-cli.sh
tests/e2e/chains/ethereum/tools/deposit/: .env.docker  .env.example  .eslintrc.json  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
tests/e2e/chains/ethereum/tools/deposit/src/: deposit.ts
tests/e2e/chains/ethereum/tools/deposit/src/abi/: deposit.json
tests/e2e/chains/ethereum/tools/deposit/types/ethers-contracts/: Deposit.ts  index.ts
tests/e2e/chains/ethereum/tools/deposit/types/ethers-contracts/factories/: Deposit__factory.ts  index.ts
tests/e2e/chains/tendermint/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
tests/e2e/chains/tendermint/proto/: buf.yaml
tests/e2e/chains/tendermint/proto/ibc/applications/mockapp/v1/: tx.proto
tests/e2e/chains/tendermint/scripts/: protocgen.sh
tests/e2e/chains/tendermint/simapp/: README.md  app.go  entrypoint.sh  ibc.go  tm-chain
tests/e2e/chains/tendermint/simapp/mockapp/: ibc_module.go  module.go
tests/e2e/chains/tendermint/simapp/mockapp/client/cli/: cli.go  tx.go
tests/e2e/chains/tendermint/simapp/mockapp/keeper/: genesis.go  keeper.go  msg_server.go  relay.go
tests/e2e/chains/tendermint/simapp/mockapp/types/: codec.go  errors.go  expected_keepers.go  genesis.go  keys.go  msgs.go  tx.pb.go  types.go
tests/e2e/chains/tendermint/simapp/simd/: main.go
tests/e2e/chains/tendermint/simapp/simd/cmd/: root.go
tests/e2e/chains/xion/: Dockerfile  Makefile  compose.yml
tests/e2e/chains/xion/scripts/: entrypoint.sh  tm-chain
tests/e2e/scripts/: init_lcp.sh  run_e2e_test.sh  run_xion2eth_test.sh  run_xion2xion_test.sh
