[package]
name = "enclave"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "proxy_enclave"
crate-type = ["staticlib"]

[features]
default = []
production = [
    "enclave-runtime/production"
]
sgx-sw = [
    "enclave-runtime/sgx-sw"
]

[dependencies]
log = { version = "0.4.8", default-features = false }
simple_logger = { git = "https://github.com/bluele/rust-simple_logger", branch = "sgx", default-features = false, features = ["sgx"] }

enclave-runtime = { git = "https://github.com/datachainlab/lcp", rev = "a9cc4caf68250517d9058509d8ff86e6c1b18f03" }
tendermint-lc = { git = "https://github.com/datachainlab/lcp", rev = "a9cc4caf68250517d9058509d8ff86e6c1b18f03", default-features = false }
ethereum-elc = { git = "https://github.com/datachainlab/ethereum-elc", rev = "e58f412552fc945c5d3de9618dec3a8831e2dfcc", default-features = false }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tse = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_alloc = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_libc = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive_internals = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto_helper = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_crypto_helper = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand = { rev = "v1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }

[patch."crates-io"]
getrandom = { git = "https://github.com/datachainlab/getrandom-sgx", branch = "v0.2.8" }
# TODO these patches would be better as optional
sha2-0106 = { git = "https://github.com/bluele/hashes", branch = "0.10.6-sha256-hwa-disabled", package = "sha2" }
sha2-098 = { git = "https://github.com/bluele/hashes", branch = "0.9.8-sha256-hwa-disabled", package = "sha2" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
