[package]
name = "enclave"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "proxy_enclave"
crate-type = ["staticlib"]

[dependencies]
enclave-runtime = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.12" }
tendermint-lc = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.12", default-features = false }
ethereum-elc = { git = "https://github.com/datachainlab/ethereum-elc", rev = "f895ffdda65c62dbac3bfa306da1766cc54a5cfc", default-features = false }

[patch."crates-io"]
getrandom = { git = "https://github.com/datachainlab/getrandom-sgx-lite" }
# TODO these patches would be better as optional
sha2-0108 = { git = "https://github.com/bluele/hashes", branch = "0.10.8-sha256-hwa-disabled", package = "sha2" }
sha2-099 = { git = "https://github.com/bluele/hashes", branch = "0.9.9-sha256-hwa-disabled", package = "sha2" }
ibc = { git = "https://github.com/datachainlab/ibc-rs", rev = "v0.29.0-channel-upgrade-path" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
